packages/uow-core/main/default/objects/UoWConfiguration__mdt/UoWConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Master configuration for Unit of Work transaction orchestrator. Defines feature flags, logging levels, channel implementations, and links to plugin/policy/object settings.</description>
    <label>UoW Configuration</label>
    <pluralLabel>UoW Configurations</pluralLabel>
</CustomObject>