packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/ApprovalChannelClassName__c.field-meta.xml
<CustomField>
    <fullName>ApprovalChannelClassName__c</fullName>
    <description>Fully qualified class name of the approval channel to use (must implement UoWInterfaces.IApprovalChannel). If blank, uses UoWSalesforceApprovalChannel.</description>
    <inlineHelpText>Fully qualified class name of the approval channel to use (must implement UoWInterfaces.IApprovalChannel). If blank, uses UoWSalesforceApprovalChannel.</inlineHelpText>
    <label>Approval Channel Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>