packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/ApprovalMetadataJson__c.field-meta.xml
<CustomField>
    <fullName>ApprovalMetadataJson__c</fullName>
    <label>Approval Metadata JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>