packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/ApprovalNamedCredential__c.field-meta.xml
<CustomField>
    <fullName>ApprovalNamedCredential__c</fullName>
    <description>Named Credential for approval channel integration (required when ApprovalChannel = SLACK). Format: UoW_Slack_API</description>
    <label>Approval Named Credential</label>
    <length>120</length>
    <type>Text</type>
</CustomField>