packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/ApprovalTimeoutMinutes__c.field-meta.xml
<CustomField>
    <fullName>ApprovalTimeoutMinutes__c</fullName>
    <description>Approval request timeout in minutes</description>
    <label>Approval Timeout (minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>