packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/CalloutStrategyClassName__c.field-meta.xml
<CustomField>
    <fullName>CalloutStrategyClassName__c</fullName>
    <description>Class Name for the callout execution strategy. Must implement UoWInterfaces.ICalloutStrategy or extend UoWBaseCalloutStrategy</description>
    <label>Callout Strategy Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>