packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/ConfidenceThreshold__c.field-meta.xml
<CustomField>
    <fullName>ConfidenceThreshold__c</fullName>
    <description>Minimum agent confidence score (0-1) to proceed without approval</description>
    <label>Confidence Threshold</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>