packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/DmlBatchSize__c.field-meta.xml
<CustomField>
    <fullName>DmlBatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Default DML batch size for bulk operations. Controls how many records are processed per DML statement. Default: 200</description>
    <label>DML Batch Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>