packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/DmlSecurityMode__c.field-meta.xml
<CustomField>
    <fullName>DmlSecurityMode__c</fullName>
    <description>ENFORCED - Strict enforcement with stripInaccessible
PERMISSIVE - No enforcement (for system context, trusted operations)</description>
    <inlineHelpText>ENFORCED - Strict enforcement with stripInaccessible
PERMISSIVE - No enforcement (for system context, trusted operations)</inlineHelpText>
    <label>DML Security Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENFORCED</fullName>
                <default>true</default>
                <label>ENFORCED</label>
            </value>
            <value>
                <fullName>PERMISSIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>