packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/DmlStrategyClassName__c.field-meta.xml
<CustomField>
    <fullName>DmlStrategyClassName__c</fullName>
    <description>Class Name that dictates the DML strategy while executing DMLs. Must extend UoWBaseDmlStrategy</description>
    <label>DML Strategy Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>