packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/EmailChannelClassName__c.field-meta.xml
<CustomField>
    <fullName>EmailChannelClassName__c</fullName>
    <description>Apex class name for custom Email Channel implementation. Must implement UoWInterfaces.IEmailChannel. Leave blank to use default Salesforce Email Channel.</description>
    <inlineHelpText>Fully qualified Apex class name (e.g., MyCustomEmailChannel) that implements UoWInterfaces.IEmailChannel. Leave blank to use default UoWDefaultEmailChannel.</inlineHelpText>
    <label>Email Channel Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>