packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/EnableMasking__c.field-meta.xml
<CustomField>
    <fullName>EnableMasking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable data masking for sensitive fields (PII, credit cards, etc.). When enabled, UoWMaskingService will apply masking rules configured in UoWDataMaskRule__mdt.</description>
    <label>Enable Masking</label>
    <type>Checkbox</type>
</CustomField>