packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/EnableOriginSourceMetadata__c.field-meta.xml
<CustomField>
    <fullName>EnableOriginSourceMetadata__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable origin source metadata capture for audit records. When enabled, queries ApexClass metadata (API version, created/modified info) and extracts source code snippets around the origin line. Requires View All Data permission. Uses caching to minimize SOQL overhead.</description>
    <label>Enable Origin Source Metadata</label>
    <type>Checkbox</type>
</CustomField>