packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/EnableScenarioRecordTracking__c.field-meta.xml
<CustomField>
    <fullName>EnableScenarioRecordTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, the framework automatically creates and maintains UoWScenario__c records for each unique scenario name. This enables lookup relationships and scenario-based analytics. When disabled, only the text-based TransactionScenarioName__c field is populated.</description>
    <inlineHelpText>Enable to automatically create UoWScenario__c records for scenarios and link them to audit transactions. Disable for lightweight text-only scenario tracking.</inlineHelpText>
    <label>Enable Scenario Record Tracking</label>
    <type>Checkbox</type>
</CustomField>