packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/EnableTracing__c.field-meta.xml
<CustomField>
    <fullName>EnableTracing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable OpenTelemetry-compatible distributed tracing for performance monitoring and observability</description>
    <inlineHelpText>When enabled, the framework captures detailed trace data (spans and events) following OpenTelemetry standards. Trace data can be exported to external APM tools (Datadog, New Relic, etc.)</inlineHelpText>
    <label>Enable Tracing</label>
    <type>Checkbox</type>
</CustomField>