packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/EventBatchSize__c.field-meta.xml
<CustomField>
    <fullName>EventBatchSize__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Default platform event batch size. Controls how many platform events are published per batch. Default: 100</description>
    <label>Event Batch Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>