packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/EventChannelClassName__c.field-meta.xml
<CustomField>
    <fullName>EventChannelClassName__c</fullName>
    <description>Apex class name for custom Event Channel implementation. Must implement UoWInterfaces.IEventChannel. Leave blank to use default Platform Event Channel.</description>
    <inlineHelpText>Fully qualified Apex class name (e.g., MyCustomEventChannel) that implements UoWInterfaces.IEventChannel. Leave blank to use default UoWDefaultPlatformEventChannel.</inlineHelpText>
    <label>Event Channel Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>