packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/EventPublishFailureHandlerClassName__c.field-meta.xml
<CustomField>
    <fullName>EventPublishFailureHandlerClassName__c</fullName>
    <description>Event Publish Failure Handler class name (implements IEventPublishFailureHandler).
Called asynchronously in a separate transaction when platform events fail to deliver after commit.
Optional - if not specified, failures are logged via System.debug only.
The audit package provides UoWEventPublishFailureHandler as a default implementation.
Example: UoWEventPublishFailureHandler</description>
    <inlineHelpText>Event Publish Failure Handler class name (implements IEventPublishFailureHandler).
Optional - if not specified, failures are logged only.</inlineHelpText>
    <label>Event Publish Failure Handler Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>