packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/FlowChannelClassName__c.field-meta.xml
<CustomField>
    <fullName>FlowChannelClassName__c</fullName>
    <description>Apex class name for custom Flow Channel implementation. Must implement UoWInterfaces.IFlowChannel. Leave blank to use default Salesforce Flow Channel.</description>
    <inlineHelpText>Fully qualified Apex class name (e.g., MyCustomFlowChannel) that implements UoWInterfaces.IFlowChannel. Leave blank to use default UoWDefaultFlowChannel.</inlineHelpText>
    <label>Flow Channel Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>