packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/MaxAsyncDepth__c.field-meta.xml
<CustomField>
    <fullName>MaxAsyncDepth__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Maximum async execution depth to prevent infinite queueable loops. When a transaction is enqueued via ASYNC mode, this controls how many levels deep async execution can go. Default: 1 (parent can enqueue child, but child cannot enqueue grandchild)</description>
    <label>Max Async Depth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>