packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/MaxDmlBatchSize__c.field-meta.xml
<CustomField>
    <fullName>MaxDmlBatchSize__c</fullName>
    <defaultValue>10000</defaultValue>
    <description>Maximum DML batch size allowed. Upper limit for bulk operations to prevent governor limit issues. Default: 10000</description>
    <label>Max DML Batch Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>