packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/MinimumLoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>MinimumLoggingLevel__c</fullName>
    <description>Minimum logging level for message collection. Only messages at this level or higher are collected and passed to message listeners. Lower levels are filtered out to prevent message bloat.</description>
    <inlineHelpText>Controls which messages are collected. FINEST (most verbose) to ERROR (least verbose). Default: INFO collects ERROR, WARN, and INFO messages only.</inlineHelpText>
    <label>Minimum Logging Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
                <default>true</default>
                <label>INFO</label>
            </value>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>FINE</fullName>
            </value>
            <value>
                <fullName>FINER</fullName>
            </value>
            <value>
                <fullName>FINEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>