packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/NotificationChannelClassName__c.field-meta.xml
<CustomField>
    <fullName>NotificationChannelClassName__c</fullName>
    <description>Apex class name for custom Notification Channel implementation. Must implement UoWInterfaces.INotificationChannel. Leave blank to use default Salesforce Notification Channel.</description>
    <inlineHelpText>Fully qualified Apex class name (e.g., MyCustomNotificationChannel) that implements UoWInterfaces.INotificationChannel. Leave blank to use default UoWDefaultNotificationChannel.</inlineHelpText>
    <label>Notification Channel Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>