packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/RiskApprovalThreshold__c.field-meta.xml
<CustomField>
    <fullName>RiskApprovalThreshold__c</fullName>
    <defaultValue>75</defaultValue>
    <description>Risk score threshold (0-100) that requires human approval before execution. Leave blank if no approval required</description>
    <inlineHelpText>Risk score threshold (0-100) that requires human approval before execution. Leave blank if no approval required</inlineHelpText>
    <label>Risk Approval Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>