packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/RiskAssessorClassName__c.field-meta.xml
<CustomField>
    <fullName>RiskAssessorClassName__c</fullName>
    <description>Fully qualified class name of the risk assessor to use (must implement UoWInterfaces.IRiskAssessor). If blank, risk assessment is skipped.</description>
    <inlineHelpText>Fully qualified class name of the risk assessor to use (must implement UoWInterfaces.IRiskAssessor). If blank, risk assessment is skipped.</inlineHelpText>
    <label>Risk Assessor Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>