packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/RiskBlockThreshold__c.field-meta.xml
<CustomField>
    <fullName>RiskBlockThreshold__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Risk score threshold (0-100) that blocks execution entirely (no approval option). Leave blank if no blocking required</description>
    <inlineHelpText>Risk score threshold (0-100) that blocks execution entirely (no approval option). Leave blank if no blocking required</inlineHelpText>
    <label>Risk Block Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>