packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/RiskCriticalThreshold__c.field-meta.xml
<CustomField>
    <fullName>RiskCriticalThreshold__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Risk score threshold (0-100) for CRITICAL risk level</description>
    <inlineHelpText>Risk score threshold (0-100) for CRITICAL risk level</inlineHelpText>
    <label>Risk Critical Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>