packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/RiskHighThreshold__c.field-meta.xml
<CustomField>
    <fullName>RiskHighThreshold__c</fullName>
    <defaultValue>70</defaultValue>
    <description>Risk score threshold (0-100) for HIGH risk level</description>
    <inlineHelpText>Risk score threshold (0-100) for HIGH risk level</inlineHelpText>
    <label>Risk High Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>