packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/RiskLowThreshold__c.field-meta.xml
<CustomField>
    <fullName>RiskLowThreshold__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Risk score threshold (0-100) for LOW risk level</description>
    <inlineHelpText>Risk score threshold (0-100) for LOW risk level</inlineHelpText>
    <label>Risk Low Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>