packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/RiskMediumThreshold__c.field-meta.xml
<CustomField>
    <fullName>RiskMediumThreshold__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Risk score threshold (0-100) for MEDIUM risk level</description>
    <label>Risk Medium Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>