packages/uow-core/main/default/objects/UoWConfiguration__mdt/fields/TransactionFinalizerClassName__c.field-meta.xml
<CustomField>
    <fullName>TransactionFinalizerClassName__c</fullName>
    <description>Transaction Finalizer class name (implements ITransactionFinalizer) for async execution finalization.
Optional - if not specified, no finalizer is attached to async transactions.
The finalizer is guaranteed to execute even on unhandled exceptions (platform guarantee).
Example: MyErrorLoggingFinalizer, MyRetryFinalizer</description>
    <inlineHelpText>Transaction Finalizer class name (implements ITransactionFinalizer) for async execution finalization.
Optional - if not specified, no finalizer is attached.</inlineHelpText>
    <label>Transaction Finalizer Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>