packages/uow-core/main/default/objects/UoWConfiguration__mdt/listViews/AllConfigurations.listView-meta.xml
<ListView>
    <fullName>AllConfigurations</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>EnableScenarioRecordTracking__c</columns>
    <columns>EnableTracing__c</columns>
    <columns>EnableMasking__c</columns>
    <columns>EnableOriginSourceMetadata__c</columns>
    <columns>RethrowTransactionExceptions__c</columns>
    <columns>MinimumLoggingLevel__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>